[gd_scene load_steps=4 format=3 uid="uid://br810wjbtd73e"]

[ext_resource type="Script" uid="uid://c8sa04uh71kwy" path="res://Scripts/UIScript.gd" id="1_yd0xa"]
[ext_resource type="Texture2D" uid="uid://pn8msrkv4lp8" path="res://Assets/OurAssets/UI/Health2.png" id="2_yd0xa"]
[ext_resource type="Texture2D" uid="uid://bo6qy0snb2htf" path="res://Assets/OurAssets/UI/Ability1.png" id="3_3ngb3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 6.0
offset_right = 66.0
offset_bottom = 56.0
script = ExtResource("1_yd0xa")

[node name="HealthBar1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -14.0
offset_right = 42.0
offset_bottom = 48.0
texture = ExtResource("2_yd0xa")

[node name="HealthBar2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 21.0
offset_right = 77.0
offset_bottom = 48.0
texture = ExtResource("2_yd0xa")

[node name="HealthBar3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 56.0
offset_right = 112.0
offset_bottom = 48.0
texture = ExtResource("2_yd0xa")

[node name="HealthBar4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 91.0
offset_right = 147.0
offset_bottom = 48.0
texture = ExtResource("2_yd0xa")

[node name="HealthBar5" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 126.0
offset_right = 182.0
offset_bottom = 48.0
texture = ExtResource("2_yd0xa")

[node name="Ability1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -14.0
offset_top = 22.0
offset_right = 23.0
offset_bottom = 59.0
texture = ExtResource("3_3ngb3")

[node name="Ability2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 22.0
offset_right = 56.0
offset_bottom = 59.0
texture = ExtResource("3_3ngb3")

[node name="Ability3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 22.0
offset_right = 89.0
offset_bottom = 59.0
texture = ExtResource("3_3ngb3")
